# mlld

./: .claude  .clean-repo.json  .env.local.example  .env.test  .eslintrc.js  .gitignore  .gitmodules  .npmignore  404.html  AGENTS.md  ALLOWEDENV-PLAN.md  AST-EXPLORER-USAGE.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DEVLOCK-PLAN.md  ESCAPE-IMPLEMENTATION-PLAN-POST-REFACTOR.md  ESCAPING-ENTRY-POINT.md  FIXMYTESTS.meld.md  GITHUB-MODULE-REFACTOR.md  GLOB-META-SPEC.md  IMPLEMENTATION_SUMMARY.md  ISSUE-command-reference-args.md  J2BD-HANDOFF.md  LICENSE  MANUAL-QA-SECURITY.md  MERGE-CONFLICT-RESOLUTION-STRATEGY.md  PIPELINE-ARCHITECTURE.md  QA-HANDOFF.md  README.md  RESOLUTION-POINTS.md  RETRY-PLAN.md  SECURE-EXECUTION-ANALYSIS.md  SECURITY-CONSOLIDATION-PROMPT.md  SECURITY-DOCS-STATUS.md  SECURITY-INTEGRATION-PLAN-V2.md  SHADOWENV-PLAN.md  STD-LIBRARY-UPDATES.md  STRUCTURED-VALUE-BOUNDARY-SEMANTICS.md  (+149 more)
.beads/: beads.db  beads.db-shm  beads.db-wal  beads.left.jsonl  beads.left.meta.json  deletions.jsonl  issues.jsonl  last-touched
.claude-plugin/: marketplace.json
.fray/: agents.jsonl  fray-config.json  messages.jsonl  threads.jsonl
_dev/: ARCHITECTURE.md  AST-BASE-INTERFACES.md  AST-EXPLORER-ENHANCEMENTS.md  AST-REFACTOR-PLAN.md  AST-REFACTOR-TECHNICAL-NOTES.md  AST-SNAPSHOT.md  AST-TYPES-CLEANUP.md  AST-TYPES.md  AUDIT-TYPE-ALIGNMENT.md  BASIC-SECURITY.md  BYO-FLOW.md  COMPLEX-DATA-GRAMMAR-PLAN.md  COMPLEX-DATA-INTERPRETER-PLAN.md  DOCUMENTATION-UPDATE-SUMMARY.md  EDITOR-SUPPORT-RESEARCH.md  EDITS.md  ERROR-SYSTEM-NOTES.md  ERROR-SYSTEM-PLAN.md  EXAMPLES-LIST.md  FIXTURE-MANAGEMENT-SOLUTION.md  GRAMMAR-AUDIT.md  GRAMMAR-BUGS.md  GRAMMAR-CHANGES.md  GRAMMAR-TWEAKS.md  GRAMMAR-TYPE-UPDATES.md  GRAMMAR-UPDATE.md  GRAMMAR-UPDATES-DONE.md  HASH-CACHE-GRAMMAR-UPDATE.md  HASH-CACHE.md  IMPLEMENTATION-STATUS.md  INTERPRETER-DIRECTIVE-STATUS.md  INTERPRETER-HANDOFF.md  INTERPRETER-MIGRATION-STATUS.md  INTERPRETER-REWRITE-PLAN.md  ISSUES-PLAN.md  MIGRATION-AUDIT-TRACKER.md  MIGRATION-SUMMARY.md  NEWSTATE.md  OLD-TESTS.md  OUTPUT-MANAGEMENT-COMPLETED.md  (+55 more)
_issues/: handoff-message.md  issueprompt.md  meld-ast-path-validation-bug-report.md  meld-spec-location-tracking.md  path-ast-diagnostics-results.json  path-validation-issue.md  path-validation-resolution.md
_meld/: arch.meld.md  phase1-context.md  phase1-context.meld.md  repomix.md  sdk.meld.md  summarize-tests.md  syntaxupdate.meld.md  test.meld.md
_plans/: AST-FIELD.md  AST-ID-id.md  AST-IMPORT-ISSUE.md  AST-INTERPVALS-done.md  AST-INTERPVALS.md  AST-ISSUES-CLEANUP.md  AST-ISSUES-PROGRESS.md  AST-REFACTOR.md  AST-SCIENCE.md  AST-TEST-REFACTOR.md  AST-TYPE-ERRORS.md  AST-VALUES-OBJECT.md  AST-VALUES-SPEC.md  AST-VARIABLES.md  BUG-RESOLUTION.md  CIRCULARITY-ISSUE-ANALYSIS.md  CIRCULARITY.md  DI-LAZY-MOCK-LEARNINGS.md  DI-TEST-ISSUES.md  E2E-CHECKS-RUN.md  FIX-API-TEST-OOM.md  FIX-CLI-BUILD.md  FIX-TEST-DIRECTIVE-RESULT-MOCKS.md  INTEGRATION-TEST-FAILURES.md  INVESTIGATE-CORE-FAILURES.md  ISSUE-TYPEINFO.md  NEW-MOCK-SETUP.md  PLAN-DI-REFACTOR.md  PLAN-FIX-TRANSFORMATION-TEST-LINTS.md  PLAN-FIXTESTS.md  PLAN-PHASE-1.md  PLAN-PHASE-2.md  PLAN-PHASE-3-ISSUES.md  PLAN-PHASE-3.md  PLAN-PHASE-4.md  PLAN-PHASE-5.md  (+20 more)
lib/mlld-python/: .gitignore  README.md  example.py  pyproject.toml  setup.py
lib/mlld-python/scripts/: sync-version.js
lib/mlld-python/src/mlld/: __init__.py  core.py  errors.py  utils.py
lib/mlld-python/tests/: __init__.py  test_basic.py  test_integration.py
sdk/python/: README.md  mlld.py  pyproject.toml  test_fs_status.py  test_live_integration.py  test_protocol_fixtures.py  test_sig_surface.py  test_state_write_parsing.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
(+11960 files in other folders)
