[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlld"
dynamic = ["version"]
description = "Python wrapper for the mlld (Meld) markup language processor"
readme = "README.md"
authors = [
    {name = "Mlld Team", email = "contact@mlld-lang.org"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mlld", "meld", "markup", "template", "processing"]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/mlld-lang/mlld"
Documentation = "https://mlld-lang.org/docs"
Repository = "https://github.com/mlld-lang/mlld"
Issues = "https://github.com/mlld-lang/mlld/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18",
    "black>=22.0",
    "mypy>=0.950",
]

[tool.setuptools.dynamic]
version = {attr = "mlld.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true