[package]
name = "mlld"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for the mlld CLI"
license = "MIT"
repository = "https://github.com/mlld-lang/mlld"
keywords = ["mlld", "scripting", "llm", "ai"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.10"
