[package]
name = "mlld"
version = "2.0.0-rc78"
edition = "2021"
description = "Rust wrapper for the mlld CLI"
license = "MIT"
repository = "https://github.com/mlld-lang/mlld/tree/main/sdk/rust"
homepage = "https://mlld.dev"
documentation = "https://docs.rs/mlld"
readme = "README.md"
keywords = ["mlld", "scripting", "llm", "ai"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
